# repo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.pipe  Dockerfile.web  README.md  app.py  install.sh  install_rest.sh  pyproject.toml
.github/workflows/: docker-publish.yml
analysis/: MLBert_headlines.py  check_canon_url_unique.py  country_mention.py  mbert_headlines.py  moral_sentiment_baseline.py  news_sentiment_config.json  quickstats.py  sentiment_antonym_pair_util.py
analysis/filters/: impossible.py  month.py  no_title.py
contrib/csc/: clusc.json  run.sh
dashboard/: app.py  database_conn.py  pyproject.toml
dashboard/coviddash/: app.py  base.py  common.py  database_conn.py  mentions.py  view_animated.py  view_main.py  view_mentions.py  view_moral.py  view_news.py
data/: country-codes-tlds.csv
database/: database_schema.sql  digest_country_mentions_jsonl.py  digest_document_jsonl.py  digest_mbert_sentiment_jsonl.py  digest_moral_sentiment_jsonl.py  digest_topic_json.py  digest_topic_jsonl.py  mk_db.py  utils.py
ingress/: agg_usenews.py  country_detection_utils.py  covidmarch.py  covidstatebroadcaster.py  get_domain_hqs.py  mynewsplease.py  save_use_news_urls.py  save_usenews_urls.py  search_utils.py  usenews_fulltext.py  usenews_to_pickles.py
ingress/workflow/: Snakefile
ingress/workflows/: Snakefile
mmmbgknow/: country.py  country_detect.py  european.py  langdetect_euro.py  pickled_searchers.py  search.py  state_broadcaster.py  tests.py  url.py
mmmbgknow/data/: country_labels.csv  country_search.pkl  covid_labels.csv  covid_search.pkl  euro_country.csv  euro_language.csv  fqdn_country.csv  lang_country.csv  langdetect_euro_country.csv  langdetect_languages.csv  state_broadcasters.csv  tld_country.csv
mmmbgknow/queries/: get_country_labels.py  get_covid_labels.py  get_euro_country.py  get_euro_language.py  get_fqdn_country.py  get_lang_country.py  get_state_broadcasters.py  get_tld_country.py
mmmbgknow/searchers/: country.py  covid.py
mmmbgknow/utils/: csv.py  wikidata.py
topic_modeler/: .gitignore  data.py
topic_modeler/TeMoCo/: LICENSE  README.md
topic_modeler/TeMoCo/hackathonSoftware/: README.md  articles.json  articles1.csv  articlesMosaic.html
topic_modeler/TeMoCo/hackathonSoftware/convertinDataExample/articlesToJSON/: article2json.py  de-news-1996-08-04-2.txt  de-news-1996-08-04-5.txt  de-news-1996-08-05-3.txt
topic_modeler/TeMoCo/hackathonSoftware/convertinDataExample/modelOutputToCSV/: denews_dtm2.json  outputToData.py
topic_modeler/TeMoCo/temoco/: data2.csv  temoko.html
topic_modeler/TeMoCo/temocoDoc/: AVImosaic.html  AVIreflect.html  avi.csv
workflow/: Snakefile
workflow/rules/: analysis.smk  database.smk  ingress.smk  mmmbgknow.smk  setup.smk
