[tool.poetry]
name = "coviddash"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.9"
# stream format
jsonlines = "^2.0.0"
# fast json encoding
orjson = "^3.4.7"
# just for tokenization during keyword filtering
tokenizers = "^0.10.0"
# cpu count
loky = "^2.9.0"
# missing requirement from news-please
cchardet = "^2.1.7"
snakemake = "^5.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
