[tool.poetry]
name = "coviddash"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

packages = [
    { include = "ingress" },
    { include = "analysis" },
    { include = "mmmbgknow" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
# stream format
jsonlines = "^2.0.0"
# fast json encoding
orjson = "^3.4.7"
# cpu count
loky = "^2.9.0"
# missing requirement from news-please
cchardet = "^2.1.7"
snakemake = "^5.32.0"
# needed by snakemake slurm profile
pandas = "^1.2.1"
# for converting usenews
rpy2 = { version = "^3.4.2", optional = true }
awscli = "^1.19.2"
transformers = "^4.2.2"
SPARQLWrapper = "^1.8.5"
pycountry-convert = "^0.7.2"
pyre2 = "^0.3.3"
sentencepiece = "^0.1.95"
ibis-framework = {extras = ["sqlite"], version = "^1.4.0"}
nltk = "^3.5"
scipy = "^1.6.0"

[tool.poetry.extras]
usenews = ["rpy2"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
