[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-v2"

[tool.poetry.dependencies]
python = "^3.7.1"
dash = "^1.19.0"
pandas = "^1.2.1"
dash-bootstrap-components = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
